fix footer spacing

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,6 +1,6 @@
 
 .footer {
-  height: 550px;
+  height: 200px;
 }
 
 .regular-footer {
