--- a/src/pages/contact/contact.css
+++ b/src/pages/contact/contact.css
@@ -9,7 +9,7 @@
   
   /* height: calc(100vh - 200px); */
   height: 100vh;
- 
+  margin-bottom: 100px;
 }
 
 .contact-prompt {
